--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,7 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: go get -v -t -d ./...
+      - run: cd backend; go build main.go
       - run: go test -v ./...
+      - store_test_results:
+        path: test-results
