--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,16 +18,21 @@ jobs:
     ####   /go/src/github.com/circleci/go-tool
     ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/kabuto-mushi/kabutoworld
+    
+    environment: # environment variables for the build itself
+      TEST_RESULTS: /tmp/test-results # path to where test results will be saved
+
+    
     steps:
       - checkout
 
       # specify any bash command here prefixed with `run: `
       - run: cd backend; go build main.go
-      - run: go test -v ./... > test-results
+      - run: go test -v ./... > /tmp/test-results
       
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: /tmp/test-results
           destination: raw-test-output
       
       - store_test_results:
-          path: test-results
+          path: /tmp/test-results
