test copy pasta

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,19 @@ jobs:
     
     steps:
       - checkout
+      - run: mkdir -p $TEST_RESULTS # create the test results directory
 
       # specify any bash command here prefixed with `run: `
       - run: cd backend; go build main.go
-      - run: go test -v ./... > /tmp/test-results
+      - run: go get github.com/jstemmer/go-junit-report
+      
+      - run:
+          name: Run unit tests
+          # Store the results of our tests in the $TEST_RESULTS directory
+          command: |
+            trap "go-junit-report <${TEST_RESULTS}/go-test.out > ${TEST_RESULTS}/go-test-report.xml" EXIT
+            make test | tee ${TEST_RESULTS}/go-test.out
+      
       
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: /tmp/test-results
