Update azure-pipelines.yml for Azure Pipelines
go test

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,7 @@ steps:
     go build -v .
   workingDirectory: '$(modulePath)/backend'
   displayName: 'Get dependencies, then build'
+
+- script: go test -v ./...
+  workingDirectory: '$(modulePath)'
+  displayName: 'Run tests'
